# AHA

./: .gitignore  CLAUDE.md  README.md  README_v1.6.md  pyproject.toml  readme.md
.claude/: settings.json
.claude/agents/: reviewer.md
.claude/rules/: mpm-workflow.md
.claude/skills/mpm-autonext/: SKILL.md
.claude/skills/mpm-init/: SKILL.md
.claude/skills/mpm-init-design/: SKILL.md
.claude/skills/mpm-init-project/: SKILL.md
.claude/skills/mpm-next/: SKILL.md
.claude/skills/mpm-task-write/: SKILL.md
.mpm/data/: future.json
.mpm/data/past/: 260319.json
.mpm/docs/: PROJECT.md
.mpm/scripts/: hook-autonext-stop.sh  hook-notify.sh  hook-reviewer-start.sh  task.py
dashboard/: projects.py  server.py
dashboard/templates/: index.html  terminal.html
data/: cli_patterns.json  config.json  ideas.json
docs/: ARCHITECTURE.md  ROADMAP.md  keyboard_ux.md
docs/design/: task-system-v2.md
docs/handoff/: 2603140119.md  2603141524.md  2603151818.md  2603161430.md  2603161538.md  2603171155.md  2603181226.md  2603181916.md  2603191743.md
gateway/: file_watcher.py  multiplexer.py  pty_bridge.py  session_manager.py
src/aha/: cli.py
src/aha/dashboard/: __main__.py  projects.py  server.py
src/aha/gateway/: file_watcher.py  session_manager.py
src/mpm/: cli.py
src/mpm/dashboard/: __main__.py  projects.py  server.py
templates/.aha/: aha-workflow.md
templates/.aha/scripts/: hook-autonext-stop.sh  hook-init-check.sh  hook-notify.sh  hook-planner-start.sh  hook-pretool-task-check.sh  hook-review.sh  human-review.py  (+5 more)
templates/.claude/: settings.json
(+47 files in other folders)
