[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aha"
version = "0.1.0"
description = "AHA (Asynchronous Human & AI) — Dashboard for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-socketio>=5.3",
    "requests>=2.31",
    "markdown>=3.5",
    "watchdog>=4.0",
    "click>=8.1",
    "questionary>=2.0",
    "tzdata>=2024.1",
]

[project.scripts]
aha = "aha.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aha"]

[tool.hatch.build.targets.wheel.shared-data]
"templates" = "share/aha/templates"
